Fix scrollbars on Lexical and Prosemirror

--- a/completed/lexical/src/style.css
+++ b/completed/lexical/src/style.css
@@ -14,6 +14,7 @@ body {
   width: 100%;
   height: 80vh;
   overflow-y: auto;
+  box-sizing: border-box;
   padding: 0 16px;
 }
 
