--- a/completed/prosemirror/src/style.css
+++ b/completed/prosemirror/src/style.css
@@ -344,7 +344,7 @@ img.ProseMirror-separator {
 .ProseMirror p { margin-bottom: 1em }
 
 html {
-  background: white;
+  background: transparent;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -352,8 +352,8 @@ body {
   margin: 0;
   line-height: 1.45;
   font-size: 16px;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-y: auto;
+  overflow-x: auto;
   position: relative;
 }
 
